# encoderfile

./: .env.example  .gitattributes  .gitbook-branch-readme.md  .gitignore  .pre-commit-config.yaml  404.html  BUILDING.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.python.bindings  Justfile  Makefile  README.md  THIRDPARTY.html  THIRDPARTY.md  THIRDPARTY.yml  about.hbs  about.toml  allowlist.txt  build.rs  codecov.yml  config.ld  docker-compose.yml  dummy_config_text.yml  dummy_config_token.yml  index.html  index.md  install.sh  latest  mkdocs.yml  pyproject.toml  sitemap.xml  test.ipynb  test.py  test.txt  test_config.yml  test_config_lua.yml  test_img_class_config.yml  versions.json
.cargo/: config.toml
encoderfile/: Cargo.toml  build.rs
encoderfile-core/: Cargo.toml  build.rs
encoderfile-core/benches/: benchmark_transforms.rs  l2_norm.rs  postprocessing.rs
encoderfile-core/proto/: manifest.proto  process.proto
encoderfile-core/src/: assets.rs  cli.rs  error.rs  factory.rs  lib.rs  main.rs  server.rs
encoderfile-core/src/common/: config.rs  embedding.rs  mod.rs  model_config.rs  model_metadata.rs  model_type.rs  sentence_embedding.rs  sequence_classification.rs  token.rs  token_classification.rs
encoderfile-core/src/dev_utils/: mod.rs
encoderfile-core/src/format/: assets.rs  container.rs  footer.rs  loader.rs  mod.rs  serialization.rs
encoderfile-core/src/format/assets/: kind.rs  mod.rs  plan.rs  planned_asset.rs  source.rs
encoderfile-core/src/format/codec/: decoder.rs  encoder.rs  mod.rs
encoderfile-core/src/inference/: embedding.rs  inference.rs  mod.rs  sentence_embedding.rs  sequence_classification.rs  token_classification.rs
encoderfile-core/src/runtime/: config.rs  loader.rs  mod.rs  model.rs  model_config.rs  state.rs  tokenizer.rs  transform.rs
encoderfile-core/src/services/: embedding.rs  inference.rs  mod.rs  model_metadata.rs  sentence_embedding.rs  sequence_classification.rs  token_classification.rs
encoderfile-core/src/transforms/: engine.rs  mod.rs  utils.rs
encoderfile-core/src/transforms/engine/: embedding.rs  mod.rs  sentence_embedding.rs  sequence_classification.rs  token_classification.rs
encoderfile-core/src/transforms/tensor/: mod.rs
encoderfile-core/src/transport/grpc/: error.rs  mod.rs
encoderfile-core/src/transport/http/: base.rs  mod.rs
encoderfile-core/src/transport/mcp/: error.rs  mod.rs
encoderfile-core/stubs/lua/: tensor.lua
encoderfile-core/tests/: test_grpc.rs  test_http.rs  test_mcp.rs  test_models.rs  test_services.rs
encoderfile-core/tests/transforms/: main.rs  mod.rs
encoderfile-py/: Cargo.toml  pyproject.toml
encoderfile-py/python/encoderfile/: __init__.py  __main__.py  _core.pyi  build.py  encoderfile.pyi  enums.py
encoderfile-py/python/tests/: anushritest.py  conftest.py  test_all.py  test_encoderfile.py  test_encoderfile_stub.py
encoderfile-py/src/: builder.rs  cli.rs  lib.rs
encoderfile-runtime/: Cargo.toml
encoderfile-runtime/src/: cli.rs  main.rs  server.rs
encoderfile-runtime/src/transport/: mod.rs
encoderfile-runtime/tests/: test_grpc.rs  test_http.rs  test_mcp.rs
encoderfile-utils/: Cargo.toml
encoderfile-utils/src/: main.rs
encoderfile/benches/: benchmark_transforms.rs  embedding_postprocessing.rs  l2_norm.rs  lorum.txt  model_utils.rs  postprocessing.rs
encoderfile/proto/: embedding.proto  encoderfile.proto  image_classification.proto  image_segmentation.proto  image_types.proto  manifest.proto  metadata.proto  object_detection.proto  sentence_embedding.proto  sequence_classification.proto  token.proto  token_classification.proto
encoderfile/src/: assets.rs  cache.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  server.rs  state.rs  templates.rs  tensor_ext.rs  terminal.rs  tokenizer.rs  utils.rs
encoderfile/src/base_binary/: mod.rs  target_spec.rs
encoderfile/src/build_cli/: builder.rs  config.rs  model.rs  templates.rs  terminal.rs  tokenizer.rs
encoderfile/src/builder/: builder.rs  config.rs  error.rs  image_preprocessor.rs  mod.rs  model.rs  tokenizer.rs
encoderfile/src/cli/: build.rs  mod.rs  runtime.rs
encoderfile/src/common/: config.rs  embedding.rs  image_classification.rs  image_types.rs  mod.rs  model_config.rs  model_metadata.rs  model_type.rs  sentence_embedding.rs  sequence_classification.rs  token.rs  token_classification.rs
encoderfile/src/dev_utils/: mod.rs
encoderfile/src/format/: container.rs  footer.rs
encoderfile/src/grpc/: mod.rs
encoderfile/src/http/: mod.rs
encoderfile/src/inference/: embedding.rs  image_classification.rs  mod.rs  model.rs  sentence_embedding.rs  sequence_classification.rs  token_classification.rs  tokenizer.rs  utils.rs
encoderfile/src/middleware/: mod.rs
encoderfile/src/model/: config.rs  mod.rs  tokenizer.rs
encoderfile/src/runtime/: cli.rs  loader.rs  mod.rs  model.rs  server.rs  session.rs  state.rs  tokenizer.rs  transform.rs
encoderfile/src/services/: embedding.rs  image_classification.rs  inference.rs  mod.rs  model_metadata.rs  sentence_embedding.rs  sequence_classification.rs  token_classification.rs
encoderfile/src/test_utils/: mod.rs
encoderfile/src/transforms/: engine.rs  mod.rs  tensor.rs  utils.lua  utils.rs
encoderfile/src/transport/: cli.rs  mod.rs  server.rs
encoderfile/stubs/lua/: tensor.lua
encoderfile/templates/: Cargo.toml.tera  main.rs.tera
encoderfile/templates/transforms/: embedding.lua  sentence_embedding.lua  sequence_classification.lua  token_classification.lua
encoderfile/tests/: integration.rs  model_utils.rs  test_grpc.rs  test_http.rs  test_mcp.rs  test_model_validation.rs  test_models.rs  test_services.rs
encoderfile/tests/integration/: test_build.rs  test_config_does_not_exist.rs  test_inspect.rs
encoderfile/tests/runtime/: test_grpc.rs  test_http.rs  test_mcp.rs
encoderfile/tests/transforms/: main.rs  mod.rs
encoderfile/transforms/: l2_normalize_embeddings.lua  softmax_sequence_cls_logits.lua
encoderfile/transforms/embedding/: l2_normalize_embeddings.lua
encoderfile/transforms/token_classification/: softmax_logits.lua
(+328 files in other folders)
