[package]
name = "encoderfile"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
tokenizers = "0.22.1"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

[dependencies.ort]
version = "=2.0.0-rc.10"
# default-features = false # Disables the `download-binaries` feature since we don't need it
features = [
    # "alternative-backend",
    "std",
    "tracing",
    "ndarray"
]
