[workspace]
resolver = "3"

members = [ "encoderfile","encoderfile-core", "encoderfile-runtime", "encoderfile-utils"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = "4.5.52"
clap_derive = "4.5.49"
rand = "0.9.2"
schemars = "1.1.0"
serde_json = "1.0.145"
ndarray = "0.16.1"
serde = { version = "1.0.228", features = [ "serde_derive",] }
tracing = "0.1.41"
thiserror = "2.0.17"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
tonic = "0.14.2"

[workspace.dependencies.parking_lot]
version = "0.12.5"

[workspace.dependencies.tokenizers]
version = "0.22.1"

[workspace.dependencies.ort]
version = "=2.0.0-rc.10"
features = [ "std", "tracing", "ndarray",]

[workspace.dependencies.tokio]
version = "1.48.0"
features = [ "full",]

[workspace.dependencies.prost]
version = "0.14.1"
