[[bench]]
name = "l2_norm"
harness = false

[[bench]]
name = "postprocessing"
harness = false

[[bench]]
name = "benchmark_transforms"
harness = false

[package]
name = "encoderfile-core"
version = "0.1.0-rc.8"
edition = "2024"
license = "Apache-2.0"
description = "Distribute and run transformer encoders with a single file."

[features]
bench = []

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
clap = "4.5.51"
clap_derive = "4.5.49"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
opentelemetry = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = "0.31.0"
parking_lot = "0.12.5"
prost = "0.14.1"
schemars = "1.0.5"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokenizers = "0.22.1"
tonic-prost = "0.14.2"
tonic-types = "0.14.2"
tonic-web = "0.14.2"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"

[build-dependencies]
dotenv = "0.15.0"
tonic-prost-build = "0.14.2"

[dev-dependencies]
rand = "0.9.2"
tower = "0.5.2"

[dependencies.mlua]
version = "0.11.4"
features = [ "lua54", "vendored",]

[dependencies.opentelemetry-otlp]
version = "0.31.0"
features = [ "grpc-tonic",]

[dependencies.rmcp]
version = "0.8.0"
features = [ "server", "transport-streamable-http-server",]

[dependencies.rmcp-macros]
version = "0.8.0"

[dependencies.serde]
version = "1.0.228"
features = [ "serde_derive",]

[dependencies.tokio]
version = "1.48.0"
features = [ "full",]

[dependencies.tonic]
version = "0.14.2"
features = [ "router",]

[dependencies.tower-http]
version = "0.6.6"
features = [ "trace",]

[dependencies.tracing-subscriber]
version = "0.3.20"
features = [ "fmt", "env-filter",]

[dependencies.ort]
version = "=2.0.0-rc.10"
features = [ "std", "tracing", "ndarray",]

[dev-dependencies.divan]
version = "4.0.5"
package = "codspeed-divan-compat"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin_include)",]
