[[bench]]
name = "l2_norm"
harness = false
required-features = [ "dev-utils",]

[[bench]]
name = "postprocessing"
harness = false
required-features = [ "dev-utils",]

[[bench]]
name = "benchmark_transforms"
harness = false
required-features = [ "dev-utils",]

[[test]]
name = "transforms"
required-features = [ "dev-utils",]

[[test]]
name = "test_grpc"
required-features = [ "dev-utils", "transport",]

[[test]]
name = "test_http"
required-features = [ "dev-utils", "transport",]

[[test]]
name = "test_mcp"
required-features = [ "dev-utils", "transport",]

[[test]]
name = "test_models"
required-features = [ "dev-utils",]

[[test]]
name = "test_services"
required-features = [ "dev-utils",]

[package]
name = "encoderfile-core"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
description = "Distribute and run transformer encoders with a single file."

[features]
default = [ "transport",]
transport = [ "runtime", "opentelemetry", "opentelemetry-semantic-conventions", "opentelemetry-stdout", "opentelemetry_sdk", "opentelemetry-otlp", "rmcp", "rmcp-macros", "axum", "axum-server", "clap", "clap_derive", "prost", "tonic-prost", "tonic-types", "tonic-web", "tracing-opentelemetry", "tonic", "tower-http",]
dev-utils = [ "runtime",]
runtime = [ "transforms", "tokenizers", "ort",]
transforms = [ "mlua",]

[dependencies]
anyhow = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = "0.6.0"
parking_lot = "0.12.5"
schemars = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"

[build-dependencies]
dotenv = "0.15.0"
tonic-prost-build = "0.14.2"

[dev-dependencies]
rand = { workspace = true }
tower = "0.5.2"
test-log = "0.2.18"

[dev-dependencies.hyper-util]
version = "0.1.18"
features = ["server-graceful"]

[dev-dependencies.hyper]
version = "1.8.1"
features = ["http1"]

[dev-dependencies.rmcp]
version = "0.8.0"
features = ["client", "transport-streamable-http-client-reqwest"]

[dependencies.axum]
version = "0.8.6"
optional = true

[dependencies.axum-server]
version = "0.7.3"
features = ["tls-rustls"]
optional = true

[dependencies.clap]
workspace = true
optional = true

[dependencies.clap_derive]
workspace = true 
optional = true

[dependencies.opentelemetry]
version = "0.31.0"
optional = true

[dependencies.opentelemetry-semantic-conventions]
version = "0.31.0"
optional = true

[dependencies.opentelemetry-stdout]
version = "0.31.0"
optional = true

[dependencies.opentelemetry_sdk]
version = "0.31.0"
optional = true

[dependencies.prost]
version = "0.14.1"
optional = true

[dependencies.tokenizers]
version = "0.22.1"
optional = true

[dependencies.tonic-prost]
version = "0.14.2"
optional = true

[dependencies.tonic-types]
version = "0.14.2"
optional = true

[dependencies.tonic-web]
version = "0.14.2"
optional = true

[dependencies.tracing-opentelemetry]
version = "0.32.0"
optional = true

[dependencies.mlua]
version = "0.11.4"
features = [ "lua54", "vendored",]
optional = true

[dependencies.opentelemetry-otlp]
version = "0.31.0"
features = [ "grpc-tonic",]
optional = true

[dependencies.rmcp]
version = "0.8.0"
features = [ "server", "transport-streamable-http-server",]
optional = true

[dependencies.rmcp-macros]
version = "0.8.0"
optional = true

[dependencies.serde]
workspace = true

[dependencies.tokio]
version = "1.48.0"
features = [ "full",]

[dependencies.tonic]
version = "0.14.2"
features = [ "router",]
optional = true

[dependencies.tower-http]
version = "0.6.6"
features = [ "trace",]
optional = true

[dependencies.tracing-subscriber]
version = "0.3.20"
features = [ "fmt", "env-filter",]

[dependencies.ort]
workspace = true
optional = true

[dev-dependencies.divan]
version = "4.0.5"
package = "codspeed-divan-compat"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [ "cfg(tarpaulin_include)",]
