[[bench]]
name = "l2_norm"
harness = false
required-features = ["dev-utils"]

[[bench]]
name = "postprocessing"
harness = false
required-features = ["dev-utils"]

[[bench]]
name = "benchmark_transforms"
harness = false
required-features = ["dev-utils"]

[[test]]
name = "transforms"
required-features = ["dev-utils"]

[[test]]
name = "test_models"
required-features = ["dev-utils"]

[[test]]
name = "test_services"
required-features = ["dev-utils"]

[package]
name = "encoderfile-core"
version = "0.4.0-beta.3"
edition = "2024"
license = "Apache-2.0"
description = "Distribute and run transformer encoders with a single file."

[features]
default = ["runtime"]
dev-utils = ["runtime"]
runtime = ["transforms", "ort"]
transforms = ["mlua"]

[dependencies]
ndarray-stats = "0.6.0"
ring = "0.17.14"
utoipa = "5.4.0"

[build-dependencies]
dotenv = "0.15.0"
tonic-prost-build = "0.14.2"

[dev-dependencies]
tower = "0.5.2"
test-log = "0.2.18"

[dev-dependencies.uuid]
version = "1.18.1"
features = ["v4"]

[dependencies.parking_lot]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.ndarray]
workspace = true

[dependencies.schemars]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.prost]
version = "0.14.1"

[dependencies.tokenizers]
workspace = true

[dependencies.tonic-prost]
version = "0.14.2"

[dependencies.mlua]
version = "0.11.4"
features = ["lua54", "vendored"]
optional = true

[dependencies.serde]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tonic]
workspace = true

[dependencies.tracing-subscriber]
version = "0.3.20"
features = ["fmt", "env-filter"]

[dependencies.ort]
workspace = true
optional = true

[dev-dependencies.rand]
workspace = true

[dev-dependencies.hyper-util]
version = "0.1.18"
features = ["server-graceful"]

[dev-dependencies.hyper]
version = "1.8.1"
features = ["http1"]

[dev-dependencies.rmcp]
version = "0.8.0"
features = ["client", "transport-streamable-http-client-reqwest"]

[dev-dependencies.divan]
version = "4.0.5"
package = "codspeed-divan-compat"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(tarpaulin_include)"]
