[package]
name = "encoderfile-py"
description = "Python bindings for encoderfile"
repository = "https://github.com/mozilla-ai/encoderfile"
version = "0.6.0-rc.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.27.0"
features = ["abi3"]

[dependencies.encoderfile]
path = "../encoderfile"
version = "0.6.0-rc.1"
default-features = false
