[package]
name = "encoderfile-runtime"
version = "0.5.0-alpha.1"
edition = "2024"
publish = false

[dependencies]

[dependencies.encoderfile]
path = "../encoderfile"
version = "0.5.0-alpha.1"
features = ["transport"]
default-features = false

[dependencies.anyhow]
workspace = true

[dependencies.parking_lot]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.tokio]
workspace = true

[features]
bench = []
dev-utils = []
