[[bin]]
name = "generate-encoderfile-config-schema"
path = "bin/generate_encoderfile_config_schema.rs"

[[bin]]
name = "generate-encoderfile-cli-docs"
path = "bin/generate_cli_docs.rs"

[package]
name = "encoderfile-utils"
version = "0.1.0-rc.19"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
clap-markdown = "0.1.5"
schemars = "1.1.0"
serde_json = "1.0.145"

[features]
bench = []

[dependencies.encoderfile]
path = "../encoderfile"
