[[bin]]
name = "encoderfile"
path = "bin/encoderfile.rs"
required-features = ["cli"]

[[bin]]
name = "generate-encoderfile-config-schema"
path = "bin/utils/generate_encoderfile_config_schema.rs"
required-features = ["internal", "cli"]

[package]
name = "encoderfile"
version = "0.4.0-beta.3"
edition = "2024"
license = "Apache-2.0"
readme = "../README.md"
description = "Distribute and run transformer encoders with a single file."

[dependencies]
clap_derive = "4.5.49"
console = { version = "0.16.2", optional = true }
directories = "6.0.0"
flate2 = "1.1.5"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.23.0"
url = "2.5.8"

[features]
default = ["cli"]
dev-utils = []
cli = ["dep:console"]
internal = []

[dev-dependencies]
tempfile = "3.23.0"

[dependencies.reqwest]
version = "0.13.1"
features = ["blocking"]

[dependencies.tokenizers]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.schemars]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.ndarray]
workspace = true

[dependencies.encoderfile-core]
path = "../encoderfile-core"
version = "0.4.0-beta.3"
features = [ "transforms", "runtime"]
default-features = false

[dependencies.figment]
version = "0.10.19"
features = [ "env", "serde_yaml", "yaml",]

[dependencies.serde]
workspace = true

[dependencies.ort]
workspace = true

[dependencies.prost]
workspace = true

[dev-dependencies.uuid]
version = "1.18.1"
features = [ "v4",]
